MODON MRE BPDEV/force-app/main/default/objects/Document_Checklists__mdt/Document_Checklists__mdt.object-meta.xml
<CustomObject>
    <label>Document Checklists</label>
    <pluralLabel>Document Checklists</pluralLabel>
</CustomObject>