MODON MRE BPDEV/force-app/main/default/objects/Document_Checklists__mdt/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Sales Operation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Customer Management</fullName>
            </value>
            <value>
                <fullName>Exceptional Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>