MODON MRE BPDEV/force-app/main/default/objects/Document_Checklists__mdt/fields/Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Description__c</fullName>
    <label>Document Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>