MODON MRE BPDEV/force-app/main/default/objects/Document_Checklists__mdt/fields/For_Company__c.field-meta.xml
<CustomField>
    <fullName>For_Company__c</fullName>
    <defaultValue>true</defaultValue>
    <label>For Company</label>
    <type>Checkbox</type>
</CustomField>