MODON MRE BPDEV/force-app/main/default/objects/Document_Checklists__mdt/fields/For_Individual__c.field-meta.xml
<CustomField>
    <fullName>For_Individual__c</fullName>
    <defaultValue>true</defaultValue>
    <label>For Individual</label>
    <type>Checkbox</type>
</CustomField>