MODON MRE BPDEV/force-app/main/default/objects/Document_Checklists__mdt/fields/For_Non_Residents__c.field-meta.xml
<CustomField>
    <fullName>For_Non_Residents__c</fullName>
    <defaultValue>true</defaultValue>
    <label>For Non-Residents</label>
    <type>Checkbox</type>
</CustomField>