MODON MRE BPDEV/force-app/main/default/objects/Document_Checklists__mdt/fields/Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sr_No__c</fullName>
    <label>Sr No</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>